using UnityEngine;
using System.Collections;
using Gameplay.Entities; // Äá»ƒ nháº­n diá»‡n script Player

namespace Gameplay.Skills
{
    public class HeroSkillSet : MonoBehaviour
    {
        protected Player player;

        [Header("--- Cáº¤U HÃŒNH MANA & COOLDOWN ---")]
        public int manaQ = 10;
        public float cooldownQ = 1.0f;

        public int manaW = 20;
        public float cooldownW = 3.0f;

        public int manaE = 50;
        public float cooldownE = 10.0f;

        // Biáº¿n kiá»ƒm tra Ä‘ang há»“i chiÃªu
        protected bool isCooldownQ = false;
        protected bool isCooldownW = false;
        protected bool isCooldownE = false;

        // Khá»Ÿi táº¡o: Nháº­n thÃ´ng tin nhÃ¢n váº­t Ä‘á»ƒ biáº¿t ai Ä‘ang dÃ¹ng chiÃªu
        public virtual void Initialize(Player _player)
        {
            player = _player;
        }

        public virtual void BasicAttack() { }

        // ==========================================================
        // CHIÃŠU Q (Trigger: Cast)
        // ==========================================================
        public virtual void TryCastQ()
        {
            if (!CanCastSkill(isCooldownQ, manaQ)) return;

            // Truyá»n hÃ nh Ä‘á»™ng gÃ¡n biáº¿n (val => isCooldownQ = val)
            ConsumeResources(val => isCooldownQ = val, manaQ, cooldownQ);

            if (player.anim != null) player.anim.SetTrigger("Cast");
            else CastSkillQ();
        }

        public virtual void CastSkillQ() { }


        // ==========================================================
        // CHIÃŠU W (Trigger: Strick)
        // ==========================================================
        public virtual void TryCastW()
        {
            if (!CanCastSkill(isCooldownW, manaW)) return;

            ConsumeResources(val => isCooldownW = val, manaW, cooldownW);

            if (player.anim != null) player.anim.SetTrigger("Strick");
            else CastSkillW();
        }

        public virtual void CastSkillW() { }


        // ==========================================================
        // CHIÃŠU E (Trigger: Until)
        // ==========================================================
        public virtual void TryCastE()
        {
            if (!CanCastSkill(isCooldownE, manaE)) return;

            ConsumeResources(val => isCooldownE = val, manaE, cooldownE);

            if (player.anim != null) player.anim.SetTrigger("Until");
            else CastSkillE();
        }

        public virtual void CastSkillE() { }


        // ==========================================================
        // CÃC HÃ€M Há»– TRá»¢ (CORE LOGIC)
        // ==========================================================

        // 1. Kiá»ƒm tra xem cÃ³ Ä‘á»§ Ä‘iá»u kiá»‡n tung chiÃªu khÃ´ng
        protected bool CanCastSkill(bool isCoolingDown, int manaCost)
        {
            if (isCoolingDown) return false; // Äang há»“i chiÃªu -> Nghá»‰

            if (player.currentMana < manaCost)
            {
                Debug.Log("ğŸ’§ KhÃ´ng Ä‘á»§ Mana!");
                return false; // Háº¿t tiá»n -> Nghá»‰
            }
            return true;
        }

        // 2. Trá»« tÃ i nguyÃªn vÃ  kÃ­ch hoáº¡t há»“i chiÃªu
        // ğŸ‘‡ ÄÃ‚Y LÃ€ CHá»– QUAN TRá»ŒNG NHáº¤T ÄÃƒ Sá»¬A ğŸ‘‡
        protected void ConsumeResources(System.Action<bool> setCooldownState, int manaCost, float time)
        {
            if (player != null)
            {
                // Thay vÃ¬ viáº¿t: player.currentMana -= manaCost (Code cÅ© - Sai vÃ¬ khÃ´ng cáº­p nháº­t UI)
                // Ta viáº¿t:
                player.UseMana(manaCost);
                // HÃ m UseMana bÃªn Player sáº½ lo viá»‡c trá»« tiá»n vÃ  gá»i UIManager váº½ láº¡i thanh mana
            }

            // Báº¯t Ä‘áº§u Ä‘áº¿m ngÆ°á»£c há»“i chiÃªu
            StartCoroutine(CooldownRoutine(setCooldownState, time));
        }

        // 3. Bá»™ Ä‘áº¿m thá»i gian há»“i chiÃªu
        protected IEnumerator CooldownRoutine(System.Action<bool> setCooldownState, float time)
        {
            // Set biáº¿n thÃ nh true (Äang báº­n)
            setCooldownState(true);

            yield return new WaitForSeconds(time);

            // Set biáº¿n thÃ nh false (ÄÃ£ ráº£nh)
            setCooldownState(false);
        }
    }
}